
        A. Robitzsch [aut, cre], T. Kiefer[aut], 
         A. C. George [aut], & A. Uenlue [aut]

mailto:
a.robitzsch /-\ bifie.at

For reporting a bug, please always provide a reproducible R script 
and (if necessary) a corresponding dataset.

URL:
https://sites.google.com/site/alexanderrobitzsch/software

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++



--------------------------------------------------------------
CDM 4.5 (2015-08-28)   --  CRAN CDM 4.5-0
--------------------------------------------------------------

NOTE  * extended 'din' and 'gdina' functions for items with more
        than five measured attributes per item
        (requested by Alvaro Artavia Medrano)
NOTE  * included 'converged' value for all models indicating
        whether maximum number of iterations was reached
        (suggested by an anonymous reviewer) 

DATA  * included/modified datasets: ---
EXAMP * included/modified examples: ---

--------------------------------------------------------------
CDM 4.4 (2015-07-01)   --  CRAN CDM 4.4-1
--------------------------------------------------------------

FIXED * fixed a bug in function 'sequential.items'

DATA  * included/modified datasets: ---
EXAMP * included/modified examples: ---

--------------------------------------------------------------
CDM 4.3 (2015-06-05)   --  CRAN CDM 4.3-0
--------------------------------------------------------------

NOTE  * included t and p values in 'IRT.jackknife.gdina'
FIXED * fixed bugs in 'summary.gdina' and 'gdina' due to
        computational problems in standard error calculation

DATA  * included/modified datasets: ---
EXAMP * included/modified examples: ---

--------------------------------------------------------------
CDM 4.2 (2015-02-23)   --  CRAN CDM 4.2-12
--------------------------------------------------------------

FIXED * fixed the ignorance of the 'centered.latent' argument 
        in the 'gdm' function